<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="us.clanryan.paceconverter.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/txtMilesPerMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="36dp"
        android:text="@string/min_per_mile"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bClear"
        android:layout_centerHorizontal="true"
        android:text="@string/calc" />

    <Button
        android:id="@+id/bClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtMilesPerMinute"
        android:layout_below="@+id/txtTotalDistance"
        android:layout_marginTop="37dp"
        android:text="@string/clear" />

    <TextView
        android:id="@+id/txtTotalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bClear"
        android:layout_below="@+id/txtTotalTime"
        android:layout_marginTop="27dp"
        android:text="@string/total_distance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTotalDistance"
        android:layout_below="@+id/txtKMPerHour"
        android:layout_marginTop="63dp"
        android:text="@string/total_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtKMPerHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTotalTime"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="27dp"
        android:text="@string/KM_per_hour"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtKMPerHour"
        android:layout_below="@+id/txtMilesPerHour"
        android:layout_marginTop="24dp"
        android:text="@string/Min_per_KM"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtMilesPerHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtMilesPerMinute"
        android:layout_below="@+id/txtMilesPerMinute"
        android:layout_marginTop="22dp"
        android:text="@string/MPH"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/chkMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bClear"
        android:layout_below="@+id/txtTotalDistance"
        android:text="@string/miles" />

    <CheckBox
        android:id="@+id/chkKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chkMiles"
        android:layout_alignBottom="@+id/chkMiles"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/kilometers" />

</RelativeLayout>
